--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                         @if (User.IsInRole(SD.ManagerRole) || User.IsInRole(SD.KitchenRole))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-page="/Admin/Order/Manageorder">Manage Order</a>
+                                <a class="nav-link text-white" asp-page="/Admin/Order/ManageOrder">Manage Order</a>
                             </li>
                         }
 
@@ -72,9 +72,13 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-page="/Admin/Order/OrderList">Order Pickup</a>
-
                             </li>
-
+                        }
+                        @if (User.IsInRole(SD.CustomerRole))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-page="/Admin/Order/OrderList">Order History</a>
+                            </li>
                         }
 
                         @if (HttpContextAccessor.HttpContext.Session.GetInt32(SD.ShoppingCart) != null)
