--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@page
-@model  AspNetCore.Areas.Identity.Pages.Account.Manage.IndexModel
+ @model  AspNetCore.Areas.Identity.Pages.Account.Manage.IndexModel
+@*@model IndexModel*@
 @{
     ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
+   
 }
 
 <h4>@ViewData["Title"]</h4>
@@ -19,7 +21,7 @@
                 <label asp-for="Input.PhoneNumber"></label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
+            </div>           
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
